remove duplicate ingredients