@@ -1,32 +1,29 @@
 package fr.inria.astor.util.expand;
 
 import fr.inria.astor.core.manipulation.MutationSupporter;
-import fr.inria.astor.core.manipulation.sourcecode.VariableResolver;
-import org.paukov.combinatorics3.Generator;
-import spoon.reflect.code.*;
-import spoon.reflect.declaration.CtElement;
+import one.util.streamex.StreamEx;
+import spoon.reflect.code.CtCodeElement;
+import spoon.reflect.code.CtExpression;
+import spoon.reflect.code.CtLocalVariable;
+import spoon.reflect.code.CtVariableAccess;
 import spoon.reflect.factory.CodeFactory;
 import spoon.reflect.factory.TypeFactory;
-import spoon.reflect.reference.CtExecutableReference;
 import spoon.reflect.reference.CtTypeReference;
 import spoon.support.reflect.code.CtBinaryOperatorImpl;
 import spoon.support.reflect.code.CtInvocationImpl;
 import spoon.support.reflect.code.CtUnaryOperatorImpl;
 
 import java.util.*;
-import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
 public class Expander {
 
     private final BinaryOperatorHelper binaryOperatorHelper;
-    private TypeFactory typeFactory;
     private final CodeFactory codeFactory;
     private final InvocationExpander invocationExpander;
 
     public Expander() {
         binaryOperatorHelper = new BinaryOperatorHelper();
-        typeFactory = new TypeFactory();
         codeFactory = MutationSupporter.factory.Code();
         invocationExpander = new InvocationExpander();
     }
@@ -43,7 +40,7 @@ public class Expander {
         Set<CtInvocationImpl> invocations = uniqueExpandedIngredients.stream().filter(i -> i instanceof CtInvocationImpl)
                 .map(i -> (CtInvocationImpl) i)
                 .collect(Collectors.toSet());
-        Set<CtInvocationImpl> expandedInvocationsWithExecutables = expandInvocationsWithExecutables(invocations);
+        Set<CtInvocationImpl> expandedInvocationsWithExecutables = invocationExpander.createInvocationsWithAllPossibleExecutables(invocations);
         uniqueExpandedIngredients.addAll(expandedBinaryOperators);
         uniqueExpandedIngredients.addAll(expandedInvocationsWithExecutables);
         Set<CtUnaryOperatorImpl> expandedInvocationsWithNegation = invocationExpander.expandInvocationsWithNegation(invocations);
@@ -55,94 +52,11 @@ public class Expander {
         set.addAll(expandedInvocationsWithNegation);
         set.addAll(binaryOpsInt);
         set.addAll(permutatedInvocations.stream().flatMap(Set::stream).collect(Collectors.toSet()));
-        return set.stream().filter(i -> !i.toString().equals("null")).collect(Collectors.toList());
+        List<CtCodeElement> noNulls = set.stream().filter(i -> !i.toString().equals("null")).collect(Collectors.toList());
+        return StreamEx.of(noNulls).distinct(CtCodeElement::toString).toList();
     }
 
-    private Set<CtInvocationImpl> expandInvocationsWithExecutables(Set<CtInvocationImpl> invocations) {
-        Set<CtCodeElement> set = new HashSet<>(invocations.size());
-        Set<CtCodeElement> invocationsWithUniqueTarget = invocations.stream().filter(invocation ->
-                invocation.getTarget() != null
-                        && set.add((invocation).getTarget())).collect(Collectors.toSet());
-
-        Set<CtInvocationImpl> expandedInvocations = new HashSet<>();
-        Set<CtInvocationImpl> expandedInvocationsWithNoParams = getExpandedInvocationsWithNoParams(invocationsWithUniqueTarget);
-        Set<CtInvocationImpl> expandedInvocationsWithParams = getExpandedInvocationsWithParams(invocationsWithUniqueTarget);
-        expandedInvocations.addAll(expandedInvocationsWithNoParams);
-        expandedInvocations.addAll(expandedInvocationsWithParams);
-
-
-        return expandedInvocations;
-    }
-
-
-    private Set<CtInvocationImpl> getExpandedInvocationsWithParams(Set<CtCodeElement> invocationsWithUniqueTarget) {
-        Set<CtInvocationImpl> expandedInvocationsWithParams = new HashSet<>();
-        invocationsWithUniqueTarget.forEach(invocation -> {
-            Collection<CtExecutableReference<?>> executables = getExecutablesWithParams((CtInvocationImpl) MutationSupporter.clone(invocation));
-            executables.forEach(executable -> {
-                CtInvocationImpl clonedInvocation = (CtInvocationImpl) MutationSupporter.clone(invocation);
-                clonedInvocation.setExecutable(executable);
-                List<CtExpression<?>> templatedArgumentsFromInvocation = getTemplatedArgumentsFromInvocation(clonedInvocation);
-                clonedInvocation.setArguments(templatedArgumentsFromInvocation);
-                formatIngredient(clonedInvocation);
-                expandedInvocationsWithParams.add(clonedInvocation);
-            });
-        });
-        return expandedInvocationsWithParams;
-    }
-
-    /**
-     * Given a invocation myClass.method(a, b) return a List of expressions in the form ["var_0" , "var_1"]
-     * Where each expression has the same type of the original invocation's corresponding argument
-     * If in this case both arguments of the invocation are of type double then restun a list of expressions with
-     * type double
-     *
-     * @param invocation the invocation from where we create a template
-     * @return the templated invocation
-     */
-    private List<CtExpression<?>> getTemplatedArgumentsFromInvocation(CtInvocationImpl invocation) {
-        List<CtExpression<?>> invocationArguments = invocation.getArguments();
-        List<CtExpression<?>> templateArguments = new LinkedList<>();
-        AtomicInteger nrVars = new AtomicInteger(0); // we want a different var name for each argument
-        invocationArguments.forEach(arg -> {
-            String varNumber = String.valueOf(nrVars.getAndIncrement());
-            CtExpression<?> clonedArg = (CtExpression<?>) MutationSupporter.clone(arg);
-            CtVariableAccess newTemplate = createVarFromExpression(clonedArg, "var_" + varNumber);
-            newTemplate.setParent(clonedArg.getParent());
-            templateArguments.add(newTemplate);
-        });
-
-        return templateArguments;
-    }
-
-    private Set<CtInvocationImpl> getExpandedInvocationsWithNoParams(Set<CtCodeElement> invocationsWithUniqueTarget) {
-        Set<CtInvocationImpl> expandedInvocationsWithNoParams = new HashSet<>();
-        invocationsWithUniqueTarget.forEach(invocation -> {
-            Collection<CtExecutableReference<?>> executables = getExecutablesWithNoParams((CtInvocationImpl) invocation);
-            executables.forEach(executable -> {
-                CtInvocationImpl clonedInvocation = (CtInvocationImpl) ((CtInvocationImpl) invocation).clone();
-                clonedInvocation.setParent(invocation.getParent());
-                clonedInvocation.setExecutable(executable);
-                if (executable.getParameters().isEmpty())
-                    clonedInvocation.setArguments(executable.getActualTypeArguments());
-                expandedInvocationsWithNoParams.add(clonedInvocation);
-            });
-        });
-
-        return expandedInvocationsWithNoParams;
-    }
-
-    private Set<CtExecutableReference<?>> getExecutablesWithNoParams(CtInvocationImpl ctInvocation) {
-        return ctInvocation.getExecutable().getDeclaringType().getAllExecutables()
-                .stream().filter(executable -> executable.getParameters().isEmpty()).collect(Collectors.toSet());
-    }
-
-    private Set<CtExecutableReference<?>> getExecutablesWithParams(CtInvocationImpl ctInvocation) {
-        return ctInvocation.getExecutable().getDeclaringType().getAllExecutables()
-                .stream().filter(executable -> !executable.getParameters().isEmpty()).collect(Collectors.toSet());
-    }
-
-    //TODO REFACTOR THIS INTO SEVERAL METHODS
+    //TODO REFACTOR THIS INTO SEVERAL METHODS and into class BinaryOperatorExpander
     private Set<CtBinaryOperatorImpl> expandBinaryOperators(List<CtCodeElement> binaryOperators) {
         Set<CtBinaryOperatorImpl> allOperators = new HashSet<>();
         binaryOperators.forEach(element -> {
@@ -212,42 +126,4 @@ public class Expander {
 
     }
 
-    public void formatIngredient(CtElement ingredientCtElement) {
-
-        List<CtVariableAccess> varAccessCollected = VariableResolver.collectVariableAccess(ingredientCtElement, true);
-        Map<String, String> varMappings = new HashMap<>();
-        int nrvar = 0;
-        for (int i = 0; i < varAccessCollected.size(); i++) {
-            CtVariableAccess var = varAccessCollected.get(i);
-
-            if (VariableResolver.isStatic(var.getVariable())) {
-                continue;
-            }
-
-            String abstractName = "";
-            if (!varMappings.containsKey(var.getVariable().getSimpleName())) {
-                String currentTypeName = var.getVariable().getType().getSimpleName();
-                if (currentTypeName.contains("?")) {
-                    // Any change in case of ?
-                    abstractName = var.getVariable().getSimpleName();
-                } else {
-                    abstractName = "_" + currentTypeName + "_" + nrvar;
-                }
-                varMappings.put(var.getVariable().getSimpleName(), abstractName);
-                nrvar++;
-            } else {
-                abstractName = varMappings.get(var.getVariable().getSimpleName());
-            }
-
-            var.getVariable().setSimpleName(abstractName);
-            // workaround: Problems with var Shadowing
-            var.getFactory().getEnvironment().setNoClasspath(true);
-            if (var instanceof CtFieldAccess) {
-                CtFieldAccess fieldAccess = (CtFieldAccess) var;
-                fieldAccess.getVariable().setDeclaringType(null);
-            }
-
-        }
-
-    }
 }
